src/test/06-Errors/error-return-multi-semi.txt
error-return-multi-semi.ck:11:5: error: not all control paths in 'fun int bar()' return a value
[11] fun int bar()
         ^
